@@ -1,3 +1,7 @@
+2011-02-06  John W. Eaton  <jwe@octave.org>
+
+	* general/circshift.m: New tests.
+
 2010-02-05  Rik  <octave@nomad.inbox5.com>
 
 	* miscellaneous/version.m, path/matlabroot.m: Correct spelling.
