@@ -1,3 +1,8 @@
+2011-02-06  John W. Eaton  <jwe@octave.org>
+
+	* PermMatrix.cc (operator*): Fix mixed row/column permutation
+	case.  Bug #32346.
+
 2010-02-04  Rik  <octave@nomad.inbox5.com>
 
 	* Makefile.am: Undo accidental checkin
